tests/fixtures/invalid/bin_dict.py
# Cannot call bin() with Dict[str, int]
x = bin({"a": 1})
